--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -12,7 +12,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/run_fragment_started"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run_startedTextView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
@@ -25,7 +25,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/starting_latitude"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run_starting_latitudeTextView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
@@ -38,7 +38,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/starting_longitude"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run_starting_longitudeTextView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
@@ -51,7 +51,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/starting_altitude"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run__starting_altitudeTextView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
@@ -64,7 +64,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/starting_address"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run_starting_addressTextView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
@@ -84,7 +84,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="4dp"
-            android:text="@string/start"/>
+            android:text="@string/start"
+            tools:ignore="ButtonStyle"/>
         <!--
            style="?android:attr/buttonBarButtonStyle"
            -->
@@ -96,7 +97,7 @@
             android:layout_weight="1"
             android:layout_margin="4dp"
             android:text="@string/stop"
-            />
+            tools:ignore="ButtonStyle"/>
         <!--
        style="?android:attr/buttonBarButtonStyle"
        -->
@@ -108,7 +109,7 @@
             android:layout_weight="1"
             android:layout_margin="4dp"
             android:text="@string/map"
-            />
+            tools:ignore="ButtonStyle"/>
         <!--
            style="?android:attr/buttonBarButtonStyle"
            -->
@@ -122,7 +123,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/run_fragment_ended"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run_endedTextView"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"/>
@@ -135,7 +136,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/ending_latitude"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run_ending_latitudeTextView"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"/>
@@ -148,7 +149,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/ending_longitude"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run_ending_longitudeTextView"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"/>
@@ -161,7 +162,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/ending_altitude"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run__ending_altitudeTextView"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"/>
@@ -174,7 +175,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/ending_address"
-            tools:ignore="RtlSymmetry" />
+            tools:ignore="RtlHardcoded,RtlSymmetry" />
         <TextView android:id="@+id/run_ending_address_TextView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
@@ -187,7 +188,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/elapsed_time"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run_durationTextView"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
@@ -202,7 +203,7 @@
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
             android:text="@string/distance_covered"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/distance_coveredTextView"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
