--- a/app/src/main/res/layout/map_activity_fragment.xml
+++ b/app/src/main/res/layout/map_activity_fragment.xml
@@ -23,7 +23,8 @@
                  android:layout_gravity="bottom|start"
                  android:layout_marginBottom="20dp"
                  android:layout_marginStart="20dp"
-                 android:layout_marginLeft="20dp">
+                 android:layout_marginLeft="20dp"
+                 tools:ignore="RtlHardcoded">
                  <TextView
                      android:id="@+id/startDateTextView"
                      android:layout_width="wrap_content"
