--- a/app/src/main/res/menu/run_map_list_options.xml
+++ b/app/src/main/res/menu/run_map_list_options.xml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+      android:title="@string/map_view"
+    android:showAsAction="ifRoom|withText"
+    tools:ignore="AppCompatResource">
+
     <item
-        android:id="@+id/tracking_options"
-        android:title="@string/map_view"
-        android:showAsAction="ifRoom|withText"
-        tools:ignore="AppCompatResource">
+       android:title="@string/show_entire_route"
+       android:id="@+id/show_entire_route_menu_item"/>
+    <item
+       android:title="@string/track_end_point"
+       android:id="@+id/track_end_point_menu_item"/>
+    <item
+       android:title="@string/track_start_point"
+       android:id="@+id/track_start_point_menu_item"/>
+    <item
+       android:title="@string/tracking_off"
+       android:id="@+id/tracking_off_menu_item"/>
 
-        <menu>
-            <item
-                android:title="@string/show_entire_route"
-                android:id="@+id/show_entire_route_menu_item"/>
-            <item
-                android:title="@string/track_end_point"
-                android:id="@+id/track_end_point_menu_item"/>
-            <item
-                android:title="@string/track_start_point"
-                android:id="@+id/track_start_point_menu_item"/>
-            <item
-                android:title="@string/tracking_off"
-                android:id="@+id/tracking_off_menu_item"/>
-        </menu>
-
-    </item>
 </menu>
