--- a/app/src/main/res/layout/map_activity_fragment.xml
+++ b/app/src/main/res/layout/map_activity_fragment.xml
@@ -13,40 +13,39 @@
     <FrameLayout
              android:id="@+id/fragmentContainer"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             />
+             android:layout_height="match_parent"/>
 
-             <LinearLayout
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:orientation="vertical"
-                 android:layout_gravity="bottom|start"
-                 android:layout_marginBottom="20dp"
-                 android:layout_marginStart="20dp"
-                 android:layout_marginLeft="20dp"
-                 tools:ignore="RtlHardcoded">
-                 <TextView
-                     android:id="@+id/startDateTextView"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginBottom="5dp"
-                     tools:text="Starting Date Goes Here."/>
-                 <TextView
-                     android:id="@+id/endDateTextView"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginBottom="5dp"
-                     tools:text="Ending Date Goes Here."/>
-                 <TextView
-                     android:id="@+id/durationTextView"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginBottom="5dp"
-                     tools:text="Duration Goes Here."/>
-                 <TextView
-                     android:id="@+id/distanceTextView"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     tools:text="Distance Goes Here."/>
-             </LinearLayout>
+    <LinearLayout
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:orientation="vertical"
+         android:layout_gravity="bottom|start"
+         android:layout_marginBottom="20dp"
+         android:layout_marginStart="20dp"
+         android:layout_marginLeft="20dp"
+         tools:ignore="RtlHardcoded">
+         <TextView
+             android:id="@+id/startDateTextView"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginBottom="5dp"
+             tools:text="Starting Date Goes Here."/>
+         <TextView
+             android:id="@+id/endDateTextView"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginBottom="5dp"
+             tools:text="Ending Date Goes Here."/>
+         <TextView
+             android:id="@+id/durationTextView"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginBottom="5dp"
+             tools:text="Duration Goes Here."/>
+         <TextView
+             android:id="@+id/distanceTextView"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             tools:text="Distance Goes Here."/>
+    </LinearLayout>
 </FrameLayout>
