--- a/app/src/main/res/layout/map_activity_fragment.xml
+++ b/app/src/main/res/layout/map_activity_fragment.xml
@@ -10,8 +10,8 @@
         can get replaced by a <merge> tag! These TextViews get instantiated in RunMapFragment.java
         because their content is derived from code there, but their xml is here so that their Views
         will be laid "on top" of the MapFragment itself-->
-    <FrameLayout
-             android:id="@+id/fragmentContainer"
+    <com.google.android.gms.maps.MapView
+             android:id="@+id/mapViewContainer"
              android:layout_width="match_parent"
              android:layout_height="match_parent"/>
 
@@ -24,6 +24,11 @@
          android:layout_marginStart="20dp"
          android:layout_marginLeft="20dp"
          tools:ignore="RtlHardcoded">
+        <TextView
+            android:id="@+id/runIdTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"/>
          <TextView
              android:id="@+id/startDateTextView"
              android:layout_width="wrap_content"
