--- a/app/src/main/res/layout-land/fragment_run.xml
+++ b/app/src/main/res/layout-land/fragment_run.xml
@@ -173,7 +173,7 @@
             android:gravity="start"
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
-            android:text="Run #"
+            android:text="@string/run_number"
             tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView
             android:id="@+id/runIdTextView"
