--- a/app/src/main/res/layout/activity_run_map_pager.xml
+++ b/app/src/main/res/layout/activity_run_map_pager.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout    xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:ignore="MergeRootFrame">
     <android.support.v4.view.ViewPager android:id="@+id/activity_run_map_pager_view_pager"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
