--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -216,7 +216,7 @@
             android:gravity="end"
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
-            android:text="Run #"
+            android:text="@string/run_number"
             tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView
             android:id="@+id/runIdTextView"
