--- a/app/src/main/res/menu/run_map_pager_options.xml
+++ b/app/src/main/res/menu/run_map_pager_options.xml
@@ -2,6 +2,16 @@
 <menu   xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:id="@+id/run_map_pager_menu_item_units"
+          android:icon="@android:drawable/ic_menu_preferences"
+          android:title="@string/imperial"
+          android:showAsAction="ifRoom"
+          tools:ignore="AppCompatResource"/>
+    <item android:id="@+id/run_map_pager_menu_item_new_run"
+          android:icon="@android:drawable/ic_menu_add"
+          android:title="@string/new_run"
+          android:showAsAction="ifRoom|withText"
+          tools:ignore="AppCompatResource" />
     <item android:id="@+id/menu_item_map_pager_delete_run"
           android:icon="@android:drawable/ic_menu_delete"
           android:title="@string/delete_run"
