1) Implemented confirmation dialog on deletion of a Run or Runs; 2) in RunManager.startTrackingRun(), added check to prevent creation of multiple ScheduledThreadPoolExecutors; 3) implemented switching distance units between imperial and metric; 4) implemented ability to turn map scrolling on and off on a per RunMapFragment basis using a menuItem instead of a button; 5) cleaned up switch statement in RunPagerActivity; 6) added new comments and deleted obsolete ones throughout; 7) experimented with changing visibility options for menu; 8) suppressed warnings for convert2lambda because listener callbacks apparently don't like to be turned into lambdas - NPEs result; 9) commented out lots of old stuff no longer used; and 10) simplified subtitles.

--- a/app/src/main/res/layout/map_activity_fragment.xml
+++ b/app/src/main/res/layout/map_activity_fragment.xml
@@ -53,4 +53,15 @@
              android:layout_height="wrap_content"
              tools:text="Distance Goes Here."/>
     </LinearLayout>
+    <!--
+    <Button android:id="@+id/scroll_control"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|top"
+            android:gravity="center"
+            android:background="?android:attr/selectableItemBackground"
+            android:textAlignment="gravity"
+            android:text="@string/map_scrolling_on"
+            android:padding="5sp"/>
+     -->
 </FrameLayout>
