--- a/app/src/main/res/menu/run_list_item_context.xml
+++ b/app/src/main/res/menu/run_list_item_context.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_item_delete_run"
-          android:icon="@android:drawable/ic_menu_delete"
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:icon="@android:drawable/ic_menu_delete"
           android:title="@string/delete_run"
-          android:showAsAction="always|withText"
-          tools:ignore="AppCompatResource" />
+          app:showAsAction="always|withText"/>
 </menu>
