--- a/app/src/main/res/menu/run_list_options.xml
+++ b/app/src/main/res/menu/run_list_options.xml
@@ -1,20 +1,17 @@
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/recycler_menu_item_units"
-          android:icon="@android:drawable/ic_menu_preferences"
+          android:icon="@android:drawable/ic_menu_edit"
           android:title="@string/imperial"
-          android:showAsAction="ifRoom|withText"
-          tools:ignore="AppCompatResource"/>
+          app:showAsAction="ifRoom|withText"/>
     <item android:id="@+id/menu_item_new_run"
           android:icon="@android:drawable/ic_menu_add"
           android:title="@string/new_run"
-          android:showAsAction="ifRoom|withText"
-          tools:ignore="AppCompatResource" />
+          app:showAsAction="ifRoom|withText"/>
     <item android:id="@+id/menu_item_sort_runs"
           android:icon="@android:drawable/ic_menu_sort_by_size"
           android:title="@string/sort"
-          android:showAsAction="ifRoom|withText"
-          tools:ignore="AppCompatResource">
+          app:showAsAction="ifRoom|withText">
         <menu>
             <item
                 android:title="@string/by_date_asc"
