--- a/app/src/main/res/menu/run_map_list_options.xml
+++ b/app/src/main/res/menu/run_map_list_options.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
       android:title="@string/map_view"
-    android:showAsAction="ifRoom|withText"
-    tools:ignore="AppCompatResource">
+    app:showAsAction="ifRoom|withText">
 
     <item
        android:title="@string/show_entire_route"
