--- a/app/src/main/res/menu/run_map_pager_options.xml
+++ b/app/src/main/res/menu/run_map_pager_options.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu   xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+<menu   xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/run_map_pager_menu_item_units"
-          android:icon="@android:drawable/ic_menu_preferences"
-          android:title="@string/imperial"
-          android:showAsAction="ifRoom"
-          tools:ignore="AppCompatResource"/>
+    <item
+        android:icon="@android:drawable/ic_menu_preferences"
+          android:title="@string/settings_menu"
+          app:showAsAction="ifRoom">
+        <menu>
+            <item
+                android:id="@+id/run_map_pager_activity_units"
+                android:title="@string/imperial"/>
+            <item
+                android:id="@+id/run_map_pager_activity_scroll"
+                android:title="@string/map_scrolling_on"/>
+        </menu>
+    </item>
     <item android:id="@+id/run_map_pager_menu_item_new_run"
           android:icon="@android:drawable/ic_menu_add"
           android:title="@string/new_run"
-          android:showAsAction="ifRoom|withText"
-          tools:ignore="AppCompatResource" />
+          app:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_item_map_pager_delete_run"
           android:icon="@android:drawable/ic_menu_delete"
           android:title="@string/delete_run"
-          android:showAsAction="ifRoom|withText"
-          tools:ignore="AppCompatResource" />
+          app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/run_map_pager_menu_item_sort_runs"
           android:icon="@android:drawable/ic_menu_sort_by_size"
           android:title="@string/sort"
-          android:showAsAction="ifRoom|withText"
-          tools:ignore="AppCompatResource">
+          app:showAsAction="ifRoom">
         <menu>
             <item
                 android:title="@string/by_date_asc"
