--- a/app/src/main/res/layout-land/combined_fragment.xml
+++ b/app/src/main/res/layout-land/combined_fragment.xml
@@ -6,18 +6,15 @@
               android:layout_height="match_parent">
     <TableLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
-                 android:orientation="vertical"
-                 android:layout_weight="5"
-                 android:descendantFocusability="afterDescendants">
+                 android:layout_weight="5.1">
         <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:paddingRight="5sp"
-                android:paddingEnd="5sp"
-                android:text="@string/run_fragment_started"
-                tools:ignore="RtlHardcoded,RtlSymmetry"/>
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:gravity="end"
+                      android:paddingRight="5sp"
+                      android:paddingEnd="5sp"
+                      android:text="@string/run_fragment_started"
+                      tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run_startedTextView"
                       android:layout_width="fill_parent"
                       android:layout_height="wrap_content"/>
@@ -29,24 +26,12 @@
                 android:gravity="end"
                 android:paddingRight="5sp"
                 android:paddingEnd="5sp"
-                android:text="@string/starting_latitude"
+                android:text="@string/starting_position"
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
-            <TextView android:id="@+id/run_starting_latitudeTextView"
-                      android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:paddingRight="5sp"
-                android:paddingEnd="5sp"
-                android:text="@string/starting_longitude"
-                tools:ignore="RtlHardcoded,RtlSymmetry"/>
-            <TextView android:id="@+id/run_starting_longitudeTextView"
-                      android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+            <TextView android:id="@+id/run_starting_pointTextView"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -74,39 +59,30 @@
                       android:layout_width="fill_parent"
                       android:layout_height="wrap_content"/>
         </TableRow>
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
             android:descendantFocusability="afterDescendants">
-            <!--
-           style="?android:attr/buttonBarStyle"
-           -->
 
             <Button
                 android:id="@+id/run_startButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_margin="4dp"
+                android:layout_marginEnd="4dp"
                 android:text="@string/start"
                 tools:ignore="ButtonStyle"/>
-            <!--
-               style="?android:attr/buttonBarButtonStyle"
-               -->
 
             <Button
                 android:id="@+id/run_stopButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_margin="4dp"
+                android:layout_marginEnd="4dp"
                 android:text="@string/stop"
                 tools:ignore="ButtonStyle"/>
-            <!--
-           style="?android:attr/buttonBarButtonStyle"
-           -->
-
         </LinearLayout>
         <TableRow>
             <TextView
@@ -128,24 +104,12 @@
                 android:gravity="end"
                 android:paddingRight="5sp"
                 android:paddingEnd="5sp"
-                android:text="@string/ending_latitude"
+                android:text="@string/ending_position"
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
-            <TextView android:id="@+id/run_ending_latitudeTextView"
-                      android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:paddingRight="5sp"
-                android:paddingEnd="5sp"
-                android:text="@string/ending_longitude"
-                tools:ignore="RtlHardcoded,RtlSymmetry"/>
-            <TextView android:id="@+id/run_ending_longitudeTextView"
-                      android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+            <TextView android:id="@+id/ending_pointTextView"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -199,13 +163,11 @@
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"/>
         </TableRow>
-    </TableLayout>
 
+    </TableLayout>
     <com.google.android.gms.maps.MapView android:id="@+id/mapViewContainer"
                                          android:layout_width="0dp"
                                          android:layout_height="match_parent"
-                                         android:layout_weight="4">
-
-    </com.google.android.gms.maps.MapView>
+                                         android:layout_weight="4"/>
 
 </LinearLayout>
