--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -24,24 +24,12 @@
             android:gravity="end"
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
-            android:text="@string/starting_latitude"
+            android:text="@string/starting_position"
             tools:ignore="RtlHardcoded,RtlSymmetry"/>
-        <TextView android:id="@+id/run_starting_latitudeTextView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
-    </TableRow>
-    <TableRow>
-        <TextView
+        <TextView android:id="@+id/run_starting_pointTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="end"
-            android:paddingRight="5sp"
-            android:paddingEnd="5sp"
-            android:text="@string/starting_longitude"
-            tools:ignore="RtlHardcoded,RtlSymmetry"/>
-        <TextView android:id="@+id/run_starting_longitudeTextView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
+            android:gravity="start"/>
     </TableRow>
     <TableRow>
         <TextView
@@ -73,6 +61,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
         android:descendantFocusability="afterDescendants">
         <!--
        style="?android:attr/buttonBarStyle"
@@ -83,7 +73,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_margin="4dp"
+            android:layout_marginEnd="4dp"
             android:text="@string/start"
             tools:ignore="ButtonStyle"/>
         <!--
@@ -95,21 +85,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_margin="4dp"
+            android:layout_marginEnd="4dp"
             android:text="@string/stop"
             tools:ignore="ButtonStyle"/>
         <!--
        style="?android:attr/buttonBarButtonStyle"
        -->
 
-        <Button
+        <!--<Button
             android:id="@+id/run_mapButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="4dp"
             android:text="@string/map"
-            tools:ignore="ButtonStyle"/>
+            tools:ignore="ButtonStyle"/>-->
         <!--
            style="?android:attr/buttonBarButtonStyle"
            -->
@@ -135,24 +125,12 @@
             android:gravity="end"
             android:paddingRight="5sp"
             android:paddingEnd="5sp"
-            android:text="@string/ending_latitude"
+            android:text="@string/ending_position"
             tools:ignore="RtlHardcoded,RtlSymmetry"/>
-        <TextView android:id="@+id/run_ending_latitudeTextView"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"/>
-    </TableRow>
-    <TableRow>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:paddingRight="5sp"
-            android:paddingEnd="5sp"
-            android:text="@string/ending_longitude"
-            tools:ignore="RtlHardcoded,RtlSymmetry"/>
-        <TextView android:id="@+id/run_ending_longitudeTextView"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"/>
+        <TextView android:id="@+id/ending_pointTextView"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:gravity="start"/>
     </TableRow>
     <TableRow>
         <TextView
@@ -191,9 +169,9 @@
             tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/run_durationTextView"
                   android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"
-                  android:textSize="25sp"
-            />
+                  android:layout_height="wrap_content"/>
+                  <!--android:textSize="25sp"-->
+
     </TableRow>
     <TableRow>
         <TextView
@@ -206,10 +184,10 @@
             tools:ignore="RtlHardcoded,RtlSymmetry"/>
         <TextView android:id="@+id/distance_coveredTextView"
                   android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:textSize="25sp"/>
+                  android:layout_height="wrap_content"/>
+                  <!--android:textSize="25sp"/>-->
     </TableRow>
-    <TableRow>
+    <!--<TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -223,5 +201,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="25sp"/>
-    </TableRow>
+    </TableRow>-->
 </TableLayout>
