--- a/app/src/main/res/menu/run_map_pager_options.xml
+++ b/app/src/main/res/menu/run_map_pager_options.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu   xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
         android:icon="@android:drawable/ic_menu_preferences"
-          android:title="@string/settings_menu"
-          app:showAsAction="ifRoom">
+        android:title="@string/settings_menu"
+        app:showAsAction="ifRoom">
         <menu>
             <item
                 android:id="@+id/run_map_pager_activity_units"
@@ -23,7 +22,6 @@
           android:icon="@android:drawable/ic_menu_delete"
           android:title="@string/delete_run"
           app:showAsAction="ifRoom"/>
-
     <item android:id="@+id/run_map_pager_menu_item_sort_runs"
           android:icon="@android:drawable/ic_menu_sort_by_size"
           android:title="@string/sort"
@@ -47,6 +45,23 @@
             <item
                 android:title="@string/by_duration_desc"
                 android:id="@+id/run_map_pager_menu_item_sort_by_duration_desc"/>
+        </menu>
+    </item>
+    <item android:title="@string/map_view"
+          app:showAsAction="ifRoom|withText">
+        <menu>
+            <item
+                android:title="@string/show_entire_route"
+                android:id="@+id/show_entire_route_menu_item"/>
+            <item
+                android:title="@string/track_end_point"
+                android:id="@+id/track_end_point_menu_item"/>
+            <item
+                android:title="@string/track_start_point"
+                android:id="@+id/track_start_point_menu_item"/>
+            <item
+                android:title="@string/tracking_off"
+                android:id="@+id/tracking_off_menu_item"/>
         </menu>
     </item>
 </menu>
