--- a/app/src/main/res/layout/combined_fragment.xml
+++ b/app/src/main/res/layout/combined_fragment.xml
@@ -6,7 +6,8 @@
               android:layout_height="match_parent">
     <TableLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
-                 android:layout_weight="1">
+                 android:layout_weight="1"
+                 android:shrinkColumns="1">
         <TableRow>
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
