--- a/app/src/main/res/layout/content_headless.xml
+++ b/app/src/main/res/layout/content_headless.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context="com.dknutsonlaw.android.runtracker2.HeadlessActivity"
+    tools:context="com.dknutsonlaw.android.runtracker2.HeadlessActivity">
+    <!--
     tools:showIn="@layout/activity_headless">
+    -->
 
 </android.support.constraint.ConstraintLayout>
